--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,10 @@
 .carousel-caption {
     bottom: 10vw !important;
 }
+
+/* media queries  mobile*/
+/* @media only screen and (max-width: 600px) {
+    body {
+        background-color: lightblue;
+    }
+} */
